--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.0'
     //Apollo client library for read GraphQL web server
     implementation "com.apollographql.apollo:apollo-runtime:2.5.3"
     implementation "com.apollographql.apollo:apollo-coroutines-support:2.5.3"
